--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -11,8 +11,9 @@
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
+        android:paddingTop="8dp"
         android:paddingBottom="16dp"
+        android:paddingHorizontal="16dp"
         app:mcv_tileHeight="48dp"
         app:mcv_calendarMode="month"/>
 
