--- a/app/src/main/res/drawable/background_login_textinput.xml
+++ b/app/src/main/res/drawable/background_login_textinput.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Log In EditText 백그라운드 Drawable -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="?attr/colorSurfaceContainerHighest" />
