--- a/app/src/main/res/drawable/selector_calendar_text.xml
+++ b/app/src/main/res/drawable/selector_calendar_text.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- CalendarFragment CalendarView 텍스트 색상 지정 Selector -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
