--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,4 @@
+<!-- Light Mode 테마 색상 -->
 <resources>
     <style name="Theme.SKKUHelper" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/md_theme_primary</item>
